[package]
name = "glcore"
version = "0.1.1"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
readme = "Readme.md"
license-file = "LICENSE"
description = "The OpenGL core functions for Rust"
repository = "https://github.com/0xAA55-rs/glcore-rs"
keywords = ["OpenGL", "GLFW", "Game Engine", "Render", "GPU"]

[dev-dependencies]
glfw = "0.59.0"

[profile.release]
lto = "fat"

[lib]
name = "glcore"
path = "src/lib.rs"
