[package]
name = "glcore-rs"
version = "0.2.1"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
readme = "Readme.md"
license-file = "LICENSE"
description = "The OpenGL core functions for Rust, also supports OpenGL ES"
repository = "https://github.com/0xAA55-rs/glcore-rs"
keywords = ["OpenGL", "GLFW", "GameEngine", "Render", "GPU"]

[dev-dependencies]
glfw = "0.59.0"

[profile.release]
lto = "fat"

[lib]
name = "glcore"
path = "src/lib.rs"

[features]
diagnose = []
